Fix code inline line spacing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -179,8 +179,8 @@ a {
  */
 pre,
 code {
-    font-size: 1.05em;
-    line-height: 1.5em;
+//    font-size: 1.05em;
+//    line-height: 1.5em;
 }
 
 pre {
@@ -190,10 +190,16 @@ pre {
 
     background-color: #404040;
 
+    font-size: 1.05em;
+    line-height: 1.5em;
+
     > code {
         border: 0;
         padding-right: 0;
         padding-left: 0;
+
+        font-size: 1.05em;
+        line-height: 1.5em;
     }
 }
 
